--- a/src/bicicletas.html
+++ b/src/bicicletas.html
@@ -20,7 +20,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -50,7 +50,7 @@
 
         <div class="bicicletas container">
             <div class="bicicletas-imagem">
-                <img src="../public/img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+                <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
                 <span class="font-2-m cor-0">R$ 4999</span>
             </div>
             <div class="bicicletas-conteudo">
@@ -62,19 +62,19 @@
                 </p>
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="../public/img/icones/eletrica.svg" alt="" />
+                        <img src="./img/icones/eletrica.svg" alt="" />
                         Motor Elétrico
                     </li>
                     <li>
-                        <img src="../public/img/icones/carbono.svg" alt="" />
+                        <img src="./img/icones/carbono.svg" alt="" />
                         Fibra de Carbono
                     </li>
                     <li>
-                        <img src="../public/img/icones/velocidade.svg" alt="" />
+                        <img src="./img/icones/velocidade.svg" alt="" />
                         50 km/h
                     </li>
                     <li>
-                        <img src="../public/img/icones/rastreador.svg" alt="" />
+                        <img src="./img/icones/rastreador.svg" alt="" />
                         Rastreador
                     </li>
                 </ul>
@@ -85,7 +85,7 @@
         <div class="bicicletas-bg">
             <div class="bicicletas container">
                 <div class="bicicletas-imagem">
-                    <img src="../public/img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+                    <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta" />
                     <span class="font-2-m cor-0">R$ 2499</span>
                 </div>
                 <div class="bicicletas-conteudo">
@@ -97,19 +97,19 @@
                     </p>
                     <ul class="font-1-m cor-5">
                         <li>
-                            <img src="../public/img/icones/eletrica.svg" alt="" />
+                            <img src="./img/icones/eletrica.svg" alt="" />
                             Motor Elétrico
                         </li>
                         <li>
-                            <img src="../public/img/icones/carbono.svg" alt="" />
+                            <img src="./img/icones/carbono.svg" alt="" />
                             Fibra de Carbono
                         </li>
                         <li>
-                            <img src="../public/img/icones/velocidade.svg" alt="" />
+                            <img src="./img/icones/velocidade.svg" alt="" />
                             45 km/h
                         </li>
                         <li>
-                            <img src="../public/img/icones/rastreador.svg" alt="" />
+                            <img src="./img/icones/rastreador.svg" alt="" />
                             Rastreador
                         </li>
                     </ul>
@@ -120,7 +120,7 @@
 
         <div class="bicicletas container">
             <div class="bicicletas-imagem">
-                <img src="../public/img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+                <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
                 <span class="font-2-m cor-0">R$ 3999</span>
             </div>
             <div class="bicicletas-conteudo">
@@ -132,19 +132,19 @@
                 </p>
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="../public/img/icones/eletrica.svg" alt="" />
+                        <img src="./img/icones/eletrica.svg" alt="" />
                         Motor Elétrico
                     </li>
                     <li>
-                        <img src="../public/img/icones/carbono.svg" alt="" />
+                        <img src="./img/icones/carbono.svg" alt="" />
                         Fibra de Carbono
                     </li>
                     <li>
-                        <img src="../public/img/icones/velocidade.svg" alt="" />
+                        <img src="./img/icones/velocidade.svg" alt="" />
                         50 km/h
                     </li>
                     <li>
-                        <img src="../public/img/icones/rastreador.svg" alt="" />
+                        <img src="./img/icones/rastreador.svg" alt="" />
                         Rastreador
                     </li>
                 </ul>
@@ -155,7 +155,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
+            <img src="./img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -168,11 +168,11 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
             </div>
 
