--- a/src/bicicletas/nimbus.html
+++ b/src/bicicletas/nimbus.html
@@ -24,7 +24,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="../">
-                <img src="../../public/img/bikcraft.svg" alt="Bikcraft" srcset="">
+                <img src=".././img/bikcraft.svg" alt="Bikcraft" srcset="">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -52,9 +52,9 @@
 
         <div class="bicicleta container">
             <div class="bicicleta-imagens">
-                <img src="../../public/img/bicicleta/nimbus1.jpg" alt="">
-                <img src="../../public/img/bicicleta/nimbus2.jpg" alt="">
-                <img src="../../public/img/bicicleta/nimbus3.jpg" alt="">
+                <img src=".././img/bicicleta/nimbus1.jpg" alt="">
+                <img src=".././img/bicicleta/nimbus2.jpg" alt="">
+                <img src=".././img/bicicleta/nimbus3.jpg" alt="">
             </div>
 
             <div class="bicicleta-conteudo">
@@ -62,31 +62,31 @@
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
                     <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar Agora</a>
-                    <span class="font-1-xs cor-6"><img src="../../public/img/icones/entrega.svg" alt=""> entrega em 5
+                    <span class="font-1-xs cor-6"><img src=".././img/icones/entrega.svg" alt=""> entrega em 5
                         dias</span>
-                    <span class="font-1-xs cor-6"><img src="../../public/img/icones/estoque.svg" alt=""> 18 em
+                    <span class="font-1-xs cor-6"><img src=".././img/icones/estoque.svg" alt=""> 18 em
                         estoque</span>
                 </div>
 
                 <h2 class="font-1-xs cor-0">Informações</h2>
                 <ul class="bicicleta-informacoes">
                     <li>
-                        <img src="../../public/img/icones/eletrica.svg" alt="">
+                        <img src=".././img/icones/eletrica.svg" alt="">
                         <h3 class="font-1-m cor-0">Motor Elétrico</h3>
                         <p class="font-2-xs cor-5">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
                     </li>
                     <li>
-                        <img src="../../public/img/icones/velocidade.svg" alt="">
+                        <img src=".././img/icones/velocidade.svg" alt="">
                         <h3 class="font-1-m cor-0">50 km/h</h3>
                         <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
                     </li>
                     <li>
-                        <img src="../../public/img/icones/rastreador.svg" alt="">
+                        <img src=".././img/icones/rastreador.svg" alt="">
                         <h3 class="font-1-m cor-0">Rastreador</h3>
                         <p class="font-2-xs cor-5">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
                     </li>
                     <li>
-                        <img src="../../public/img/icones/carbono.svg" alt="">
+                        <img src=".././img/icones/carbono.svg" alt="">
                         <h3 class="font-1-m cor-0">Fibra de Carbono</h3>
                         <p class="font-2-xs cor-5">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
                     </li>
@@ -110,7 +110,7 @@
         <ul>
             <li>
                 <a href="./magic.html">
-                    <img src="../../public/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+                    <img src=".././img/bicicletas/magic.jpg" alt="Bicicleta preta">
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
@@ -118,7 +118,7 @@
 
             <li>
                 <a href="./nebula.html">
-                    <img src="../../public/img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+                    <img src=".././img/bicicletas/nebula.jpg" alt="Bicicleta preta">
                     <h3 class="font-1-xl">Nebula Cosmic </h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
@@ -129,7 +129,7 @@
     <article class="seguro-bg">
         <div class="seguro container">
             <div class="seguro-imagem">
-                <img src="../../public/img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+                <img src=".././img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
             </div>
             <div class="seguro-conteudo">
                 <h2 class="font-1-xxl cor-0">Pedale mais tranquilo com nosso <span class="cor-p1">seguro.</span></h2>
@@ -144,7 +144,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../../public/img/bikcraft.svg" alt="Bikcraft">
+            <img src=".././img/bikcraft.svg" alt="Bikcraft">
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -154,9 +154,9 @@
                     <li>São Paulo - SP</li>
                 </ul>
                 <div class="footer-redes">
-                    <a href="#"> <img src="../../public/img/redes/instagram.svg" alt="instagram"></a>
-                    <a href="#"> <img src="../../public/img/redes/facebook.svg" alt="facebook"></a>
-                    <a href="#"> <img src="../../public/img/redes/youtube.svg" alt="youtube"></a>
+                    <a href="#"> <img src=".././img/redes/instagram.svg" alt="instagram"></a>
+                    <a href="#"> <img src=".././img/redes/facebook.svg" alt="facebook"></a>
+                    <a href="#"> <img src=".././img/redes/youtube.svg" alt="youtube"></a>
                 </div>
 
             </div>
