--- a/src/contato.html
+++ b/src/contato.html
@@ -26,7 +26,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -69,11 +69,11 @@
                 </address>
                 <div class="contato-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram-p.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram-p.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook-p.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook-p.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube-p.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube-p.svg" alt="youtube" /></a>
                 </div>
             </section>
             <section class="contato-formulario" aria-label="Formulário">
@@ -104,8 +104,7 @@
     <article class="lojas container">
         <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
         <div class="lojas-item">
-            <img src="../public/img/lojas/rj.jpg"
-                alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ" />
+            <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ" />
             <div class="lojas-conteudo">
                 <h3 class="font-1-xl">Rio de Janeiro</h3>
                 <div class="lojas-dados font-2-s cor-8">
@@ -117,15 +116,14 @@
                     <a href="tel:+552199999999">+55 21 9999-9999</a>
                 </div>
                 <p class="lojas-tempo font-1-s">
-                    <img src="../public/img/icones/horario.svg" alt="" />08-18h de seg à
+                    <img src="./img/icones/horario.svg" alt="" />08-18h de seg à
                     dom
                 </p>
             </div>
         </div>
 
         <div class="lojas-item">
-            <img src="../public/img/lojas/sp.jpg"
-                alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP" />
+            <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP" />
             <div class="lojas-conteudo">
                 <h3 class="font-1-xl">São Paulo</h3>
                 <div class="lojas-dados font-2-s cor-8">
@@ -137,7 +135,7 @@
                     <a href="tel:+551199999999">+55 11 9999-9999</a>
                 </div>
                 <p class="lojas-tempo font-1-s">
-                    <img src="../public/img/icones/horario.svg" alt="" />08-18h de seg à
+                    <img src="./img/icones/horario.svg" alt="" />08-18h de seg à
                     dom
                 </p>
             </div>
@@ -146,7 +144,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
+            <img src="./img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -159,11 +157,11 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
             </div>
 
