--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -60,9 +60,8 @@
                 </a>
             </div>
             <picture class="fadeInDown" data-anime="800">
-                <source media="(max-width: 800px)" srcset="../public/img/bicicletas/nimbus.jpg" />
-                <img src="../public/img/fotos/introducao.jpg" width="1280" height="1600"
-                    alt="Bicicleta elétrica preta." />
+                <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg" />
+                <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta." />
             </picture>
         </div>
     </main>
@@ -74,21 +73,21 @@
         <ul>
             <li>
                 <a href="./bicicletas/magic.html">
-                    <img src="../public/img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
+                    <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nimbus.html">
-                    <img src="../public/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
+                    <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
                     <h3 class="font-1-xl">Nimbus Stark</h3>
                     <span class="font-2-m cor-8">R$ 4999</span>
                 </a>
             </li>
             <li>
                 <a href="./bicicletas/nebula.html">
-                    <img src="../public/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+                    <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
                     <h3 class="font-1-xl">Nebula Cosmic</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
@@ -113,7 +112,7 @@
                 <a class="link" href="../src/bicicletas.html">Escolha um modelo</a>
                 <div class="tecnologia-vantagens">
                     <div>
-                        <img src="../public/img/icones/eletrica.svg" alt="" />
+                        <img src="./img/icones/eletrica.svg" alt="" />
                         <h3 class="font-1-m cor-0">Motor Eletrico</h3>
                         <p class="font-2-s cor-5">
                             Toda Bikcraft é equipada com um motor elétrico que possui
@@ -125,7 +124,7 @@
                     </div>
 
                     <div>
-                        <img src="../public/img/icones/rastreador.svg" alt="" />
+                        <img src="./img/icones/rastreador.svg" alt="" />
                         <h3 class="font-1-m cor-0">Rastreador</h3>
                         <p class="font-2-s cor-5">
                             Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
@@ -136,7 +135,7 @@
             </div>
 
             <div class="tecnologia-imagem">
-                <img src="../public/img/fotos/tecnologia.jpg" alt="" />
+                <img src="./img/fotos/tecnologia.jpg" alt="" />
             </div>
         </div>
     </article>
@@ -147,24 +146,24 @@
         </h2>
 
         <ul>
-            <li><img src="../public/img/parceiros/caravan.svg" alt="caravan" /></li>
-            <li><img src="../public/img/parceiros/ranek.svg" alt="ranek" /></li>
-            <li><img src="../public/img/parceiros/handel.svg" alt="handel" /></li>
-            <li><img src="../public/img/parceiros/dogs.svg" alt="dogs" /></li>
-            <li><img src="../public/img/parceiros/lescone.svg" alt="lescone" /></li>
+            <li><img src="./img/parceiros/caravan.svg" alt="caravan" /></li>
+            <li><img src="./img/parceiros/ranek.svg" alt="ranek" /></li>
+            <li><img src="./img/parceiros/handel.svg" alt="handel" /></li>
+            <li><img src="./img/parceiros/dogs.svg" alt="dogs" /></li>
+            <li><img src="./img/parceiros/lescone.svg" alt="lescone" /></li>
             <li>
-                <img src="../public/img/parceiros/flexblog.svg" alt="flexblog" />
+                <img src="./img/parceiros/flexblog.svg" alt="flexblog" />
             </li>
             <li>
-                <img src="../public/img/parceiros/wildbeast.svg" alt="wildbeast" />
+                <img src="./img/parceiros/wildbeast.svg" alt="wildbeast" />
             </li>
-            <li><img src="../public/img/parceiros/surfbot.svg" alt="surfbot" /></li>
+            <li><img src="./img/parceiros/surfbot.svg" alt="surfbot" /></li>
         </ul>
     </section>
 
     <section class="depoimento" aria-label="depoimento">
         <div>
-            <img src="../public/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecraft" />
+            <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikecraft" />
         </div>
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cor-p5">
@@ -212,7 +211,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
+            <img src="./img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -225,11 +224,11 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
             </div>
 
