--- a/src/orcamento.html
+++ b/src/orcamento.html
@@ -27,7 +27,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -72,23 +72,23 @@
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
                             <li>
-                                <img src="../public/img/icones/eletrica.svg" alt="" /> Motor
+                                <img src="./img/icones/eletrica.svg" alt="" /> Motor
                                 Elétrico
                             </li>
                             <li>
-                                <img src="../public/img/icones/carbono.svg" alt="" /> Fibra de
+                                <img src="./img/icones/carbono.svg" alt="" /> Fibra de
                                 Carbono
                             </li>
                             <li>
-                                <img src="../public/img/icones/velocidade.svg" alt="" /> 50
+                                <img src="./img/icones/velocidade.svg" alt="" /> 50
                                 km/h
                             </li>
                             <li>
-                                <img src="../public/img/icones/rastreador.svg" alt="" />
+                                <img src="./img/icones/rastreador.svg" alt="" />
                                 Rastreador
                             </li>
                         </ul>
-                        <img src="../public/img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
+                        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta" />
                     </div>
 
                     <input type="radio" name="produto" value="magic" id="magic" />
@@ -96,23 +96,23 @@
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
                             <li>
-                                <img src="../public/img/icones/eletrica.svg" alt="" /> Motor
+                                <img src="./img/icones/eletrica.svg" alt="" /> Motor
                                 Elétrico
                             </li>
                             <li>
-                                <img src="../public/img/icones/carbono.svg" alt="" /> Fibra de
+                                <img src="./img/icones/carbono.svg" alt="" /> Fibra de
                                 Carbono
                             </li>
                             <li>
-                                <img src="../public/img/icones/velocidade.svg" alt="" /> 45
+                                <img src="./img/icones/velocidade.svg" alt="" /> 45
                                 km/h
                             </li>
                             <li>
-                                <img src="../public/img/icones/rastreador.svg" alt="" />
+                                <img src="./img/icones/rastreador.svg" alt="" />
                                 Rastreador
                             </li>
                         </ul>
-                        <img src="../public/img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+                        <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta" />
                     </div>
 
                     <input type="radio" name="produto" value="nebula" id="nebula" />
@@ -120,23 +120,23 @@
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
                             <li>
-                                <img src="../public/img/icones/eletrica.svg" alt="" /> Motor
+                                <img src="./img/icones/eletrica.svg" alt="" /> Motor
                                 Elétrico
                             </li>
                             <li>
-                                <img src="../public/img/icones/carbono.svg" alt="" /> Fibra de
+                                <img src="./img/icones/carbono.svg" alt="" /> Fibra de
                                 Carbono
                             </li>
                             <li>
-                                <img src="../public/img/icones/velocidade.svg" alt="" /> 40
+                                <img src="./img/icones/velocidade.svg" alt="" /> 40
                                 km/h
                             </li>
                             <li>
-                                <img src="../public/img/icones/rastreador.svg" alt="" />
+                                <img src="./img/icones/rastreador.svg" alt="" />
                                 Rastreador
                             </li>
                         </ul>
-                        <img src="../public/img/bicicletas/nebula.jpg" alt="Bicicleta branca" />
+                        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca" />
                     </div>
                 </div>
 
@@ -201,7 +201,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
+            <img src="./img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -214,11 +214,11 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
             </div>
 
