--- a/src/seguros.html
+++ b/src/seguros.html
@@ -28,7 +28,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="">
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -89,37 +89,37 @@
             <ul>
                 <li>
 
-                    <img src="../public/img/icones/eletrica.svg" alt="">
+                    <img src="./img/icones/eletrica.svg" alt="">
                     <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
                     <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que
                         falhas são raras, mas estamos aqui para caso ocorra.</p>
                 </li>
                 <li>
-                    <img src="../public/img/icones/carbono.svg" alt="">
+                    <img src="./img/icones/carbono.svg" alt="">
                     <h3 class="font-1-l cor-0">Carbono</h3>
                     <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra,
                         ficamos felizes em reparar.</p>
                 </li>
                 <li>
-                    <img src="../public/img/icones/sustentavel.svg" alt="">
+                    <img src="./img/icones/sustentavel.svg" alt="">
                     <h3 class="font-1-l cor-0">Sustentável</h3>
                     <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa
                         é reciclada e reutilizada em outro projeto.</p>
                 </li>
                 <li>
-                    <img src="../public/img/icones/rastreador.svg" alt="">
+                    <img src="./img/icones/rastreador.svg" alt="">
                     <h3 class="font-1-l cor-0">Rastreador</h3>
                     <p class="font-2-s cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em
                         segurança para efetuarmos a recuperação.</p>
                 </li>
                 <li>
-                    <img src="../public/img/icones/seguro.svg" alt="">
+                    <img src="./img/icones/seguro.svg" alt="">
                     <h3 class="font-1-l cor-0">Segurança</h3>
                     <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu
                         dinheiro não será perdido em casos de roubo.</p>
                 </li>
                 <li>
-                    <img src="../public/img/icones/velocidade.svg" alt="">
+                    <img src="./img/icones/velocidade.svg" alt="">
                     <h3 class="font-1-l cor-0">Rapidez</h3>
                     <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela
                         para ser reparada em uma das filiais.</p>
@@ -175,7 +175,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft">
+            <img src="./img/bikcraft.svg" alt="Bikcraft">
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -185,9 +185,9 @@
                     <li>São Paulo - SP</li>
                 </ul>
                 <div class="footer-redes">
-                    <a href="#"> <img src="../public/img/redes/instagram.svg" alt="instagram"></a>
-                    <a href="#"> <img src="../public/img/redes/facebook.svg" alt="facebook"></a>
-                    <a href="#"> <img src="../public/img/redes/youtube.svg" alt="youtube"></a>
+                    <a href="#"> <img src="./img/redes/instagram.svg" alt="instagram"></a>
+                    <a href="#"> <img src="./img/redes/facebook.svg" alt="facebook"></a>
+                    <a href="#"> <img src="./img/redes/youtube.svg" alt="youtube"></a>
                 </div>
 
             </div>
