--- a/src/termos.html
+++ b/src/termos.html
@@ -27,7 +27,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="../public/img/bikcraft.svg" alt="Bikcraft" srcset="" />
+                <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="" />
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
@@ -93,7 +93,7 @@
     </main>
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../public/img/bikcraft.svg" alt="Bikcraft" />
+            <img src="./img/bikcraft.svg" alt="Bikcraft" />
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="cor-5 font-2-m">
@@ -106,11 +106,11 @@
                 </ul>
                 <div class="footer-redes">
                     <a href="#">
-                        <img src="../public/img/redes/instagram.svg" alt="instagram" /></a>
+                        <img src="./img/redes/instagram.svg" alt="instagram" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/facebook.svg" alt="facebook" /></a>
+                        <img src="./img/redes/facebook.svg" alt="facebook" /></a>
                     <a href="#">
-                        <img src="../public/img/redes/youtube.svg" alt="youtube" /></a>
+                        <img src="./img/redes/youtube.svg" alt="youtube" /></a>
                 </div>
             </div>
 
